--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-numpy
-matplotlib
-joblib
-unidecode
-
+streamlit==1.37.0
+pandas==2.3.1
+numpy==2.3.1
+matplotlib==3.9.1
+joblib==1.5.1
+Unidecode==1.4.0
+scikit-learn==1.7.0
